# cricket-intelligence

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: update-context.md
ai_coach/: README.md
ai_coach/briefing/: README.md  preview_coach_briefing.py  render_player_briefing.py  run_briefing.sh  run_preview.sh
ai_coach/lib/: briefing.py  coaching_extractor.py  coaching_loader.py  coaching_prompts.py  critique_prompts.py  few_shot_critique.py  session_catalog.py
ai_coach/lib/pose/: extractor.py  smoothing.py
ai_coach/pipeline/coaching_corpus/: README.md  add_coaching.sh  add_reference.sh  add_reference_clip.py  extract_coaching_video.py
ai_coach/pipeline/critiques/: README.md  critique_multi_shot_session.py  critique_student_clip.py  run_critique.sh  run_net_critique.sh
ai_coach/pose/: README.md  render_ball_video.py  run_render.sh
ai_coach/rendering/: README.md  render_side_by_side.py  run_compare.sh
ai_coach/report/: mux.py  pdf.py  tts.py  video_renderer.py
archive/: README.md  features_README_2026-05-19.md
archive/chunk_mode_pipeline/: eval_against_cricsheet.py  extract_balls_from_clips.py  extract_with_cricsheet.py  merge_and_save_to_db.py  prompt.py  prompt_technique_only.py  run_broadcast.sh  run_extract_balls_from_clips.sh  run_nets.sh  run_pipeline.py  run_segment_video.sh  segment_video.py  test_extract_balls_from_clips.py  test_prompts.py
archive/data/: cricket_intelligence.db.pre-tier1.bak
archive/data/chunk_mode_experiments/: IndvsEng_balls.csv  IndvsEng_india_only.csv  T20-IndvsEng-IndBat-chunkmode-c1-90s_extracted.json  T20-IndvsEng-IndBat_extracted.json  T20-IndvsEng_extracted.json
archive/data/chunk_prompt_experiments/: IndvsEng_chunk1_with_espn.json  IndvsEng_chunk1_with_espn_v2.json  IndvsEng_chunk1_with_espn_v3.json  IndvsEng_chunk1_with_espn_v4_clean.json  IndvsEng_chunk1_with_whisper.json  IndvsEng_chunk2_with_espn.json  IndvsEng_chunk2_with_espn_v4_clean.json  IndvsEng_merged.json
benchmark/: config.py  frame_extractor.py  ground_truth.py  prompt.py  report.py  run_benchmark.py  scorer.py
benchmark/runners/: gemini_runner.py  ollama_runner.py  video_only_runner.py
data/: cricket_intelligence.db  player_aliases.yaml
data/cricsheet/IndvsEng/: england_innings.json  india_innings.json
data/espncricinfo/: Match Stats - IND vs ENG 5th T20I, Best Performances by Batters & Bowlers.html
data/espncricinfo/IndvsEng/: india_overs_0_1.json  match_1276906_commentary.json  match_1276906_innings1_commentary.json
data/espncricinfo/Match Stats - IND vs ENG 5th T20I, Best Performances by Batters & Bowlers_files/: 1356-15a7852b675e4c27.js  145-0abb73ff00a9b122.js  1992-19f248b572b3122a.js  2023-0636ea419abf3cb4.js  2054-46a108748d462fce.js  209-20fc0db4c24e76c0.js  2462-5a21d42dd49db0bd.js  2705-d734e3e258516d00.js  3007-c38a57ffa4f2e9ed.js  3296-8447e865773536a8.js  3401-2be4e6a5a2886981.js  3903-b4e0c3f39a6cecb3.js  3915-25aad1feec09f28c.js  4115-00ef1fe348e26013.js  4365-56ff0a80411f1011.js  4866-bf60e535a71385c0.js  497-1c0a363c6950dbc9.js  (+68 more)
docs/: PRODUCT_VALUE.md  architecture.md  heatmaps_explained.md  project_context.md  schema.md
docs/archive/: ARCHITECTURE_2026-05-05.md  ENGINEERING_2026-05-05.md  PLAN.md  engineering_2026-05-09.md  features_2026-05-09.md
docs/tasks/: 2026-05-11-paddle-ocr-scoreboard-timeline.md  2026-05-12-cricsheet-gemini-integration.md  README.md
match_intelligence/: README.md
match_intelligence/lib/: commentary.py  cricsheet.py  espn_commentary.py  extractor.py  synthesis_prompt.py  weakness_narrator.py
match_intelligence/pipeline/: ball_extraction.md  export_cricsheet_innings.py  import_cricsheet.py  parse_espn_pdf.py  synthesize_match_json.py  transcribe.py
match_intelligence/reports/: analyse_batsman_weakness.py  batsman_analysis.md  batsman_report.py  bowler_report.py  generate_heatmaps.py  run_weakness.sh
scripts/: load_synth_to_db.py
scripts/db_migrations/: README.md  migrate_add_pose.py  migrate_analytics_fields.py  migrate_delivery_subtype.py
src/analytics/: heatmaps.py  weakness.py
src/api/: main.py
src/intelligence/: schema.py
src/storage/: db.py
src/validation/: normalizer.py
tests/: conftest.py  test_db.py  test_normalizer.py  test_schema.py
ui/: app.py
(+18 files in other folders)
